vendor/thiserror-1.0.24/tests/ui/transparent-enum-many.stderr
error: #[error(transparent)] requires exactly one field
 --> $DIR/transparent-enum-many.rs:5:5
  |
5 | /     #[error(transparent)]
6 | |     Other(anyhow::Error, String),
  | |________________________________^
