vendor/thiserror-1.0.24/tests/ui/transparent-enum-many.rs
use thiserror::Error;

#[derive(Error, Debug)]
pub enum Error {
    #[error(transparent)]
    Other(anyhow::Error, String),
}

fn main() {}
